--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
+
+* {
+    font-family: 'Mina', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+    width: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+@media only screen and (max-width: 700px) {
+    .localTime {
+        display: none;
+    }
+}
+
+.cart {
+    display: flex;
+    flex-direction: row;
+    line-height: 0.01px;
+}
+
+.cartItemCount {
+    font-size: 0.8rem;
+    color: green;
+    font-weight: 600;
+}
+
+.blog-header{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+}
+
+.navigation {
+    padding-top: 5px;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    text-align: center;
+}
+
+.navigation::-webkit-scrollbar {
+    display: none;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
