--- a/src/App.css
+++ b/src/App.css
@@ -4,48 +4,28 @@
     font-family: 'Mina', sans-serif;
 }
 
-.logo {
-    width: 100px;
+.title{
+    color: green;
+    letter-spacing: 2px;
+    font-weight: 600;
+    margin-top: 30px;
 }
-
 
 @media only screen and (max-width: 700px) {
     .localTime {
         display: none;
     }
+    .section{
+        margin-top: 5rem;
+    }
 }
 
-.cart {
-    display: flex;
-    flex-direction: row;
-    line-height: 0.01px;
+@media only screen and (min-width: 700px) {
+    .section{
+        margin-top: 8rem;
+    }
 }
 
-.cartItemCount {
-    font-size: 0.8rem;
-    color: green;
-    font-weight: 600;
+svg {
+    cursor: pointer;
 }
-
-.blog-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.navigation {
-    padding-top: 5px;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    text-align: center;
-}
-
-nav {
-    overflow-x: scroll;
-
-}
-
-.nav::-webkit-scrollbar {
-    display: none;
-}
-
