--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,50 @@
+.logo {
+    width: 100px;
+}
+
+
+@media only screen and (max-width: 700px) {
+    .localTime {
+        display: none;
+    }
+}
+
+.cart a{
+    display: flex;
+    flex-direction: row;
+    line-height: 0.01px;
+    color: black;
+    text-decoration: none;
+}
+
+.cartItemCount {
+    font-size: 0.8rem;
+    color: green;
+    font-weight: 600;
+}
+
+.blog-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navigation {
+    padding-top: 5px;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    text-align: center;
+}
+
+nav {
+    overflow-x: scroll;
+
+}
+
+.nav::-webkit-scrollbar {
+    display: none;
+}
+
 .dropdown-menu{
     padding-left: 20px;
 }
