firebase create account done, with update profile

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -1,7 +1,13 @@
 .flag {
     width: 30px;
 }
+
 .required {
     color: red;
     font-weight: 600;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
 }
