--- a/src/App.css
+++ b/src/App.css
@@ -11,21 +11,28 @@
     margin-top: 30px;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 767px) {
     .localTime {
         display: none;
     }
     .section{
         margin-top: 5rem;
     }
+    
+    .sign_first {
+        display: none;
+    }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 768px) {
     .section{
         margin-top: 8rem;
     }
+
 }
 
 svg {
     cursor: pointer;
 }
+
+
