--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     letter-spacing: 2px;
     font-weight: 600;
     margin-top: 30px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 767px) {
