--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -36,7 +36,10 @@
 }
 
 .cart_sidebar {
-    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
 }
 
 .details {
