--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -1,6 +1,12 @@
 .book_col{
     padding: 5px;
 }
+
+.book_col a {
+    color: #000;
+    text-decoration: none;
+}
+
 .book_card{
     border: 1px solid rgb(175, 175, 175);
     width: 100%;
@@ -11,5 +17,4 @@
 
 .book_card img {
     width: 100%;
-    
 }
